# ragloop

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  README.md  RELEASING.md  add_github_files.sh  pyproject.toml  setup_ragloop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: launch-post.md
evals/: README.md  baseline.py  corpus.py  hard.py  metrics.py  report.py  runner.py
examples/: config.example.yaml  demo.py  quickstart.py
examples/corpus/: privacy.md  refunds.md  shipping.md  support-hours.md  warranty.md
ragloop/: __init__.py  cli.py  config.py
ragloop/engine/: __init__.py  graph.py  nodes.py  state.py
ragloop/llm/: _retry.py  anthropic_provider.py  base.py  ollama_provider.py
ragloop/mcp/: server.py
ragloop/retrieval/: __init__.py  base.py  chroma_retriever.py
tests/: test_anthropic.py  test_chroma.py  test_cli.py  test_config.py  test_engine.py  test_engine_extra.py  test_metrics.py  test_ollama.py  test_retry.py
